--- a/_posts/weekly/2012-08-09-hw-no-3.md
+++ b/_posts/weekly/2012-08-09-hw-no-3.md
@@ -4,34 +4,44 @@ category : weekly
 tags : [hw, database, mysql, hash_algorithm, books, memory, monitor, rank_algorithm, cache, tcp, networking, http]
 ---
 
+## 编程
+------------
+
+- YH: [Which hashing algorithm is best for uniqueness and speed?] (http://programmers.stackexchange.com/questions/49550/which-hashing-algorithm-is-best-for-uniqueness-and-speed)    
+
+LJ: 话说 github 的 vmg 在优化 bit.ly 开源库dabloom，将优化过程详细记录下来，值得一看。同时[文章] (https://github.com/bitly/dablooms/pull/19) 中同样提到了Murmur hash. 
+YF提到了 [hopscotch hashing] (http://en.wikipedia.org/wiki/Hopscotch_hashing) 号称唯一一个真正o(1) 的hash.
+
+- BX: [MySQL数据库负载很高连接数很多怎么处理] (http://www.mysqlsupport.cn/how-to-mysql-load-veryhigh/)  
+  
+个人博文,MySQL数据库负载很高连接数很多怎么处理在数据库负载较高的情况怎么做才能保障数据库不挂掉．
+
+- LJ: [TCP Fast Open: expediting web services] (http://lwn.net/Articles/508865/)
+
+- LJ: [What's the strangest corner case you've seen in C# or .NET? ] (http://stackoverflow.com/questions/194484/whats-the-strangest-corner-case-youve-seen-in-c-sharp-or-net/194671)  
+  这样的问题和答案，估计是任何语言和平台都是最宝贵的资源之一.
 
 
-http://programmers.stackexchange.com/questions/49550/which-hashing-algorithm-is-best-for-uniqueness-and-speed
-https://github.com/bitly/dablooms/pull/19
-http://en.wikipedia.org/wiki/Hopscotch_hashing
-http://www.mysqlsupport.cn/how-to-mysql-load-veryhigh/
-
-http://programmers.stackexchange.com/questions/159637/what-is-the-mars-curiosity-rovers-software-built-in
-http://programmers.stackexchange.com/questions/152464/im-doing-90-maintenance-and-10-development-is-this-normal
-
-http://stackoverflow.com/questions/9314534/why-does-changing-0-1f-to-0-slow-down-performance-by-10x/9314926#9314926
-
-http://stackoverflow.com/questions/6841333/why-is-subtracting-these-two-times-in-1927-giving-a-strange-result/6841479
+-LJ: [Why is subtracting these two times (in 1927) giving a strange result?] (http://stackoverflow.com/questions/6841333/why-is-subtracting-these-two-times-in-1927-giving-a-strange-result/6841479)   
+     酷壳的文章 [你确信你了解时间吗？] (http://coolshell.cn/articles/5075.html) 也是说的这个问题。
 
 
-http://stackoverflow.com/questions/194484/whats-the-strangest-corner-case-youve-seen-in-c-sharp-or-net/194671
+## 新闻
+-------------
 
-http://lwn.net/Articles/508865/
+- LJ: [好奇号上面有哪些软件?] (http://programmers.stackexchange.com/questions/159637/what-is-the-mars-curiosity-rovers-software-built-in)
+
+- LJ: [Http 2.0 或将基于SPDY] (http://techcrunch.com/2012/08/06/http-20-spdy-and-friendly/)  
+  Varnish 作者回应的 [反对贴] (http://lists.w3.org/Archives/Public/ietf-http-wg/2012JulSep/0172.html)
+
+- LJ: [Visual Studio 2012 and .NET 4.5 Complete!] (http://blogs.msdn.com/b/somasegar/archive/2012/08/01/visual-studio-2012-and-net-4-5-complete.aspx)
 
 
+## 其他
+-------------
 
-VS2012....
+- LJ: [作为一个程序员，90%时间在维护，10%的时间在编码，这正常么] (http://programmers.stackexchange.com/questions/152464/im-doing-90-maintenance-and-10-development-is-this-normal)
 
-http://msdn.microsoft.com/en-us/vstudio/jj573641.aspx
-http://blogs.msdn.com/b/somasegar/archive/2012/08/01/visual-studio-2012-and-net-4-5-complete.aspx
+- LJ: [碉堡了，德国联邦法律法规托管 Github 了，可以 Fork 啦！] (https://github.com/bundestag/gesetze#german-federal-laws-and-regulations)    
 
-http 2.0...
-
-http://www.mnot.net/blog/2012/08/04/http_vancouver
-http://techcrunch.com/2012/08/06/http-20-spdy-and-friendly/
-http://lists.w3.org/Archives/Public/ietf-http-wg/2012JulSep/0172.html
+  理由: "所有德国公民可以轻松在线查看最新版的法律法规，但立法过程、法律演变和法律更新则不容易追查。因为法律只是公布了最新版，且法律变更没有提供机器可读格式。这应当做出改变……"
