--- a/_posts/weekly/2012-08-09-hw-no-3.md
+++ b/_posts/weekly/2012-08-09-hw-no-3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category : weekly
-tags : [hw, database, mysql, hash_algorithm, books, memory, monitor, rank_algorithm, cache, tcp, networking, http]
+tags : [hw, database, mysql, hash_algorithm, networking, http, performance]
 ---
 
 ## 编程
