--- a/_posts/weekly/2012-08-09-hw-no-3.md
+++ b/_posts/weekly/2012-08-09-hw-no-3.md
@@ -30,6 +30,8 @@ YF提到了 [hopscotch hashing] (http://en.wikipedia.org/wiki/Hopscotch_hashing)
 
 - LJ: [好奇号上面有哪些软件?] (http://programmers.stackexchange.com/questions/159637/what-is-the-mars-curiosity-rovers-software-built-in) 2.5 million行 C代码 、RAD750处理器，测试脚本用python编写。
  - YF: [Curiosity has Landed] (http://video.sina.com.cn/v/b/83025779-1691468715.html) [Video] 
+ - YF: [好奇号软件测试方法] (http://compass.informatik.rwth-aachen.de/ws-slides/havelund.pdf)
+ - 这个JPL就是[生活大爆炸] (http://movie.douban.com/subject/10561953/) 里Howard工作的地方
 - LJ: [Http 2.0 或将基于SPDY] (http://techcrunch.com/2012/08/06/http-20-spdy-and-friendly/)  
   Varnish 作者回应的 [反对贴] (http://lists.w3.org/Archives/Public/ietf-http-wg/2012JulSep/0172.html)
 
