--- a/_posts/weekly/2012-08-16-hw-no-4.md
+++ b/_posts/weekly/2012-08-16-hw-no-4.md
@@ -15,6 +15,7 @@ tags : [hw, database, mysql, log, networking, http, performance]
 
 - LJ: [Product: Scribe - Facebook's Scalable Logging System] (http://highscalability.com/blog/2008/11/24/product-scribe-facebooks-scalable-logging-system.html)
 - LJ: [Log Everything All The Time] (http://highscalability.com/log-everything-all-time)
+- YH: [How Google uses Linux] (http://lwn.net/Articles/357658/)
 
 ## 其他
 -------------
